add admins.py to libgen appa and compelet README.md and create requirements.txt

--- a/scraper/templates/scrape_form.html
+++ b/scraper/templates/scrape_form.html
@@ -8,13 +8,7 @@
     <h2>Scrape Form</h2>
     <form method="post">
         {% csrf_token %}
-        <label for="key_word">Scrape Books:</label>
-        <input type="text" id="key_word" name="key_word" value="history">
-        <br>
-        <label for="from_books" >From Page:</label>
-        <input type="number" id="from_books" name="from_books" value="1">
-        <label for="to_books">To Page:</label>
-        <input type="number" id="to_books" name="to_books" value="5">
+         {{form.as_p}}
         <br>
         <button type="submit">Scrape</button>
     </form>
